crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@empty_object.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/empty_object.jsonnet
---
Obj(
    MemberList(
        ObjMembers {
            locals: [],
            asserts: [],
            fields: [],
        },
    ),
)
