crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@imports.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/imports.jsonnet
---
Arr(
    [
        Import(
            Normal from virtual:<test>:2-8,
            Str(
                "hello",
            ),
        ),
        Import(
            Str from virtual:<test>:18-27,
            Str(
                "garnish.txt",
            ),
        ),
        Import(
            Bin from virtual:<test>:43-52,
            Str(
                "garnish.bin",
            ),
        ),
    ],
)
