crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__peg_snapshots@string_escaping.jsonnet.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: v
input_file: crates/jrsonnet-peg-parser/src/tests/string_escaping.jsonnet
---
Arr(
    [
        Str(
            "Hello, \"world\"!",
        ),
        Str(
            "Hello 'world'!",
        ),
        Str(
            "\\\\",
        ),
        Str(
            "Hello\nWorld",
        ),
        Str(
            "Hello\\n\"World\"",
        ),
    ],
)
